Removed piano teaching

--- a/src/_data/content/about.toml
+++ b/src/_data/content/about.toml
@@ -16,7 +16,7 @@ Beethoven, Brahms, and Liszt. And as an organist, my hands are feet are happiest
 with Bach, Widor, and more contemporary music. You can find some recordings on
 my music page.
 
-[I teach piano, organ and music theory](/music/#teaching). I also do a bit of
+[I teach organ and music theory](/music/#teaching). I also do a bit of
 composition and arrangement, and mostly write hymn settings for liturgical use.
 """
     [[ sections.links ]]
